# driftfx

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.py
driftfx/: __init__.py  core.py
driftfx/_cython/: __init__.py  levenshtein.c
guardrail/: __init__.py  core.py
guardrail/_cython/: __init__.py  levenshtein.c  levenshtein.pyx
